// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProxyStatusList when status is synced match the snapshot 1`] = `<div />`;

exports[`ProxyStatusList when there are components without value match the snapshot 1`] = `
<div>
  <div
    class="pf-v6-l-stack"
  >
    <div
      class="pf-v6-l-stack__item kiali_f2dl8or"
    >
      Istio Proxy Status
    </div>
    <div
      class="pf-v6-l-stack__item kiali_fchvff1"
    >
      CDS: -
    </div>
    <div
      class="pf-v6-l-stack__item kiali_fchvff1"
    >
      RDS: -
    </div>
  </div>
</div>
`;

exports[`ProxyStatusList when there are unsyced components match the snapshot 1`] = `
<div>
  <div
    class="pf-v6-l-stack"
  >
    <div
      class="pf-v6-l-stack__item kiali_f2dl8or"
    >
      Istio Proxy Status
    </div>
    <div
      class="pf-v6-l-stack__item kiali_fchvff1"
    >
      CDS: NOT_SENT
    </div>
    <div
      class="pf-v6-l-stack__item kiali_fchvff1"
    >
      RDS: STALE
    </div>
  </div>
</div>
`;
